Fixed JS file and remove text wrap

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -123,6 +123,7 @@ body {
   padding-right: 50%;
   padding-left: 10%;
   font-size: 40pt;
+  white-space: nowrap;
   color: white;
 }
 
